remove mango, adjust dark ube bg

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -31,19 +31,15 @@ if (pageTitle === "Trevor Lee | Homepage") {
     <script is:inline>
       const themes = {
         dark: () => {
-          document.documentElement.classList.remove("light", "mango", "ube");
+          document.documentElement.classList.remove("light", "ube");
           document.documentElement.classList.add("dark");
         },
         light: () => {
-          document.documentElement.classList.remove("dark", "mango", "ube");
+          document.documentElement.classList.remove("dark", "ube");
           document.documentElement.classList.add("light");
         },
-        mango: () => {
-          document.documentElement.classList.remove("dark", "light", "ube");
-          document.documentElement.classList.add("mango");
-        },
         ube: () => {
-          document.documentElement.classList.remove("dark", "light", "mango");
+          document.documentElement.classList.remove("dark", "light");
           document.documentElement.classList.add("ube");
         },
       };
@@ -129,7 +125,6 @@ if (pageTitle === "Trevor Lee | Homepage") {
               <option value="auto">auto</option>
               <option value="dark">dark</option>
               <option value="light">light</option>
-              <option value="mango">mango</option>
               <option value="ube">ube</option>
             </select>
           </div>
