--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -3,7 +3,7 @@ const { category, pageSlug, pageTitle } = Astro.props;
 ---
 
 <ul class="link flex">
-  <li><a href="/" class="no-underline text-blue-7 hover:text-primary focus-visible:text-primary">Home</a></li>
-  {category === 'posts' && <li class="text-blue-7">&nbsp;/&nbsp;<a href=`/${category}` class="no-underline text-blue-7 hover:text-primary focus-visible:text-primary">Posts</a></li>}
-  {pageSlug && <li class="text-blue-7">&nbsp;/&nbsp;{pageTitle}</li>}
+  <li><a href="/" class="no-underline link hover:text-primary focus-visible:text-primary">Home&nbsp;/&nbsp;</a></li>
+  {category === 'posts' && <li class=""><a href=`/${category}` class="no-underline link hover:text-primary focus-visible:text-primary">Posts&nbsp;/&nbsp;</a></li>}
+  {pageSlug && <li class="text-text">{pageTitle}</li>}
 </ul>
