--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -195,7 +195,7 @@
     --text: var(--gray-1);
     --text-variant: var(--gray-6);
     --primary: var(--blue-7);
-    --primary-variant: var(--red-7);
+    --primary-variant: var(--blue-7);
     --secondary: var(--yellow-6);
     --secondary-variant: var(--yellow-7);
 
