--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -159,6 +159,19 @@
     --pink-9: 168 9 57;
     --pink-10: 143 12 55;
     --pink-11: 80 1 25;
+
+    /* shiki config */
+    --astro-code-color-text: #e0e0e0;
+    --astro-code-color-background: #100f0f;
+    --astro-code-token-constant: #43aaf9;
+    --astro-code-token-string: #5bd1b9;
+    --astro-code-token-comment: #888888;
+    --astro-code-token-keyword: #f4457d;
+    --astro-code-token-parameter: #e0e0e0;
+    --astro-code-token-function: #f9c35a;
+    --astro-code-token-string-expression: #5bd1b9;
+    --astro-code-token-punctuation: #efefef;
+    --astro-code-token-link: #f4457d;
   }
 
   .light {
