add red dragon theme

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -29,7 +29,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
 <html id="html" lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <script is:inline>
-      const themes = ["dark", "light", "ube", "vice-city"];
+      const themes = ["dark", "light", "red-dragon", "ube", "vice-city"];
 
       const applyTheme = (theme) => {
         const themesToRemove = themes.filter((t) => t !== theme);
@@ -116,6 +116,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
               <option value="auto">auto</option>
               <option value="dark">dark</option>
               <option value="light">light</option>
+              <option value="red-dragon">red dragon</option>
               <option value="ube">ube</option>
               <option value="vice-city">vice city</option>
             </select>
