change post link color to primaryVariant

--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -59,7 +59,7 @@ const { Content } = await post.render();
   }
 
   #content {
-    --tw-prose-links: rgb(var(--blue-7));
+    --tw-prose-links: rgb(var(--primary-variant));
     --tw-prose-code: rgb(var(--green-7));
     --tw-prose-headings: rgb(var(--text));
     --tw-prose-quotes: rgb(var(--text));
