--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -29,7 +29,14 @@ if (pageTitle === "Trevor Lee | Homepage") {
 <html id="html" lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <script is:inline>
-      const themes = ["dark", "light", "red-dragon", "ube", "vice-city"];
+      const themes = [
+        "dark",
+        "light",
+        "hacker",
+        "red-dragon",
+        "ube",
+        "vice-city",
+      ];
 
       const applyTheme = (theme) => {
         const themesToRemove = themes.filter((t) => t !== theme);
@@ -91,7 +98,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
   </head>
   <body class="bg-backdrop">
     <div
-      class=`bg-backdrop text-text ${fullWidth ? "" : "px-4"} m-auto max-w-[640px]`
+      class=`bg-centerBackground text-text ${fullWidth ? "" : "px-4"} m-auto max-w-[640px]`
     >
       <nav class="w-full py-4">
         <div class="flex items-center justify-between">
@@ -116,6 +123,8 @@ if (pageTitle === "Trevor Lee | Homepage") {
               <option value="auto">auto</option>
               <option value="dark">dark</option>
               <option value="light">light</option>
+              <hr />
+              <option value="hacker">hacker</option>
               <option value="red-dragon">red dragon</option>
               <option value="ube">ube</option>
               <option value="vice-city">vice city</option>
