footer color fix

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const buildTime = new Date().toISOString();
   class="flex flex-col items-baseline justify-between gap-3 pb-4 pt-24 sm:flex-row sm:gap-20"
 >
   <details
-    class="relative w-full cursor-default rounded-xl px-2 py-2 ring-2 ring-gray-10/10"
+    class="relative w-full cursor-default rounded-xl px-2 py-2 ring-2 ring-background"
   >
     <summary class="cursor-pointer"
       >Contact <span class="font-mono text-sm text-textVariant"
