swap phone link for resume link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,6 +17,18 @@ const buildTime = new Date().toISOString();
     >
     <span class="flex flex-col py-2">
       <span class="flex"
+        >Bluesky:&nbsp;<a
+          href="https://bsky.app/profile/trevortylerlee.com"
+          class="link group flex items-center gap-1"
+          >@trevortylerlee.com
+          <Icon
+            class="text-text group-hover:text-primary group-focus-visible:text-primary"
+            name="external"
+            aria-label="External link icon"
+          /></a
+        ></span
+      >
+      <span class="flex"
         >Email:&nbsp;<a
           href="mailto:trevortylerlee@gmail.com"
           class="link group flex items-center gap-1"
@@ -41,14 +53,24 @@ const buildTime = new Date().toISOString();
         ></span
       >
       <span class="flex"
-        >LinkedIn:&nbsp;<a
-          href="https://www.linkedin.com/in/trevortylerlee/"
-          class="link group flex items-center gap-1 pb-6"
-          >@trevortylerlee
+        ><a href="/rss.xml" class="link group flex items-center gap-1"
+          >RSS
           <Icon
             class="text-text group-hover:text-primary group-focus-visible:text-primary"
             name="external"
             aria-label="External link icon"
+          /></a
+        ></span
+      >
+      <span class="flex"
+        ><a
+          href="/trevor-lee-resume.pdf"
+          class="link group flex items-center gap-1 pb-1.5"
+          >Resume
+          <Icon
+            class="text-text group-hover:text-primary group-focus-visible:text-primary"
+            name="download"
+            aria-label="Download link icon"
           /></a
         ></span
       >
