--- a/src/components/ProfileCard.astro
+++ b/src/components/ProfileCard.astro
@@ -81,12 +81,12 @@ const { images, featureImage } = Astro.props;
         />
       </a>
       <a
-        href="tel:7782353815"
+        href="/trevor-lee-resume.pdf"
         class="link group flex items-center gap-1 text-lg"
       >
-        ☎️ Telephone <Icon
+        📎 Resume <Icon
           class="text-text group-hover:text-primary group-focus-visible:text-primary"
-          name="external"
+          name="download"
         />
       </a>
     </div>
@@ -126,10 +126,13 @@ const { images, featureImage } = Astro.props;
       name="external"
     />
   </a>
-  <a href="tel:7782353815" class="link group flex items-center gap-1 text-lg">
-    ☎️ Telephone <Icon
+  <a
+    href="/trevor-lee-resume.pdf"
+    class="link group flex items-center gap-1 text-lg"
+  >
+    📎 Resume <Icon
       class="text-text group-hover:text-primary group-focus-visible:text-primary"
-      name="external"
+      name="download"
     />
   </a>
 </div>
