fix rss link in head

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -88,7 +88,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
       rel="alternate"
       type="application/rss+xml"
       title="Trevor Tyler Lee"
-      href="https://trevortylerlee.com/feed.xml"
+      href="https://trevortylerlee.com/rss.xml"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="generator" content={Astro.generator} />
