--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -79,7 +79,7 @@ const buildTime = new Date().toISOString();
   <div
     id="build-time"
     data-time={buildTime}
-    class="flex min-w-[200px] flex-grow-0 flex-row-reverse items-center sm:flex-row"
+    class="flex min-w-[200px] flex-grow-0 flex-row items-center sm:flex-row-reverse"
   >
     <a
       href="https://github.com/trevortylerlee/trevortylerlee.com/commits/main"
